# fieldz-docs-example

./: .copier-answers.yml  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/: ISSUE_TEMPLATE.md
docs/: index.md
reference/SUMMARY/: index.html
reference/fieldz_docs_example/: index.html
reference/fieldz_docs_example/attrs/: index.html
reference/fieldz_docs_example/dataclasses/: index.html
reference/fieldz_docs_example/msgspec/: index.html
reference/fieldz_docs_example/pydantic/: index.html
search/: search_index.json
src/fieldz_docs_example/: __init__.py  attrs.py  dataclasses.py  msgspec.py  pydantic.py
